add dependencies to build.gradle and small changes in gitignore